@@ -1,22 +1,27 @@
 require 'rubygems'
 require 'rake'
+require 'yaml'
+
+task :default => :test
 
 begin
   require 'jeweler'
   Jeweler::Tasks.new do |gem|
-
+    # gem is a Gem::Specification... see http://www.rubygems.org/read/chapter/20 for additional settings
     gem.name = "dircat"
     gem.summary = "command line utilites to manage catalogs of directory"
 
     gem.authors = ["Tokiro"]
     gem.email = "tokiro.oyama@gmail.com"
     gem.homepage = "http://github.com/tokiro/dircat"
+    gem.add_development_dependency "rspec"
 
     #
     # files
     #
     gem.files = Dir['lib/**/*.rb']
     gem.executables = Dir['bin/*.rb'].map{ |e| File.basename(e) }
+    gem.files << "VERSION.yml"
     
     # dati per il test
     gem.files.concat Dir['test_data/**/*.{yaml,txt}']
@@ -31,16 +36,10 @@ begin
     #
     gem.rubyforge_project = 'dircat'
   end
+  Jeweler::GemcutterTasks.new
 
 rescue LoadError
   puts "Jeweler (or a dependency) not available. Install it with: sudo gem install jeweler"
-end
-
-require 'rake/testtask'
-Rake::TestTask.new(:test) do |test|
-  test.libs << 'lib' << 'test'
-  test.pattern = 'test/**/tc_*.rb'
-  test.verbose = true
 end
 
 begin
@@ -55,9 +54,6 @@ rescue LoadError
     abort "RCov is not available. In order to run rcov, you must: sudo gem install spicycode-rcov"
   end
 end
-
-
-task :default => :test
 
 require 'rake/rdoctask'
 Rake::RDocTask.new do |rdoc|
@@ -103,3 +99,23 @@ rescue LoadError
   puts "Rake SshDirPublisher is unavailable or your rubyforge environment is not configured."
 end
 
+#
+# spec
+#
+
+require 'spec/rake/spectask'
+
+desc "Run all examples"
+Spec::Rake::SpecTask.new('spec') do |t|
+  t.spec_files = FileList['spec/**/*_spec.rb']
+end
+
+desc "Generate HTML report for failing examples"
+Spec::Rake::SpecTask.new('failing_examples_with_html') do |t|
+  t.spec_files = FileList['failing_examples/**/*.rb']
+  t.spec_opts = ["--format", "html:doc/reports/tools/failing_examples.html", "--diff"]
+  t.fail_on_error = false
+end
+
+task :test => :check_dependencies
+task :default => :spec
