@@ -1,29 +1,21 @@
-$DIRCAT_HOME = File.expand_path( File.join( File.dirname( __FILE__), "..", "..") )
-$:.unshift( File.join($DIRCAT_HOME, "lib" ) )
+require File.join(File.dirname(__FILE__), "..", "spec_helper")
 
-# stdlib
-require 'test/unit'
+describe DirCat do
 
-# dircat
-require 'dircat/dircat.rb'
-require 'dircat/cli/dircat_build.rb'
-
-class TC_DirCatBuild < Test::Unit::TestCase
-
-  def setup
-    @testdata_dirname         = File.join( $DIRCAT_HOME, "test_data", "dircat", "data")
+  before do
+    @testdata_dirname         = TEST_DIR
     @dir1_dirname             = File.join( @testdata_dirname, "dir1" )
     @dir2_dirname             = File.join( @testdata_dirname, "dir2" )
     @certified_output_dirname = File.join( @testdata_dirname, "certified_output" )
     @tmp_output_dirname       = File.join( @testdata_dirname, "tmp" )
   end
 
-  def test_help
+  it "test_help" do
     args = "-h"
     DirCatBuild.new.parse_args( args.split )
   end
 
-  def test_dir1
+  it "test_dir1" do
     expect_filename = File.join( @certified_output_dirname, "dircat1.yaml" )
     result_filename = File.join( @tmp_output_dirname,       "dircat1.yaml")
     args = "-f -o #{result_filename} #{@dir1_dirname}"
@@ -32,10 +24,10 @@ class TC_DirCatBuild < Test::Unit::TestCase
     cat_expect = DirCat.loadfromfile( expect_filename )
     cat_result = DirCat.loadfromfile( result_filename )
 
-    assert_equal( 0, (cat_result - cat_result).size )
+    (cat_result - cat_result).size.should == 0
 
-    assert_equal( 0, (cat_result - cat_expect).size )
-    assert_equal( 0, (cat_expect - cat_result).size )
+    (cat_result - cat_expect).size.should == 0
+    (cat_expect - cat_result).size.should == 0
 
     FileUtils.rm(result_filename)
   end
