@@ -1,8 +1,5 @@
-$DIRCAT_HOME = File.expand_path( File.join( File.dirname( __FILE__), "..", "..") )
-$:.unshift( File.join($DIRCAT_HOME, "lib" ) )
+require File.join(File.dirname(__FILE__), "..", "spec_helper")
 
-require 'test/unit'
-require 'dircat/dircat.rb'
 
 # dir1 contiene 2 file
 # aggiunto un file a dir1
@@ -23,59 +20,54 @@ require 'dircat/dircat.rb'
 #         `-- file3.txt
 
 
-class TC_DirCat < Test::Unit::TestCase
+describe DirCat do
 
-  def setup
-    @data_dir = File.join($DIRCAT_HOME, "test_data", "dircat", "data")
+  before do
+    @data_dir = TEST_DIR
     @tmp_dir  = File.join( @data_dir, "tmp" )
   end
 
-  def teardown
-  end
-
-  def test_dircat1
+  it "test_dircat1" do
     dircat1 = DirCat.loadfromdir( File.join(@data_dir, "dir1") )
-    assert_equal(2, dircat1.size )
-    assert_equal(4, dircat1.bytes )
+    dircat1.size.should == 2
+    dircat1.bytes.size.should == 8
   end
 
-  def test_dircat2
+  it "test_dircat2" do
     dircat2 = DirCat.loadfromdir( File.join(@data_dir, "dir2") )
-    assert_equal(3, dircat2.size )
-    assert_equal(6, dircat2.bytes )
+    dircat2.size.should == 3
+    dircat2.bytes.should == 6
   end
 
-  def test_diff_dir1_dir2
+  it "test_diff_dir1_dir2" do
     dircat1 = DirCat.loadfromdir( File.join(@data_dir, "dir1") )
     dircat2 = DirCat.loadfromdir( File.join(@data_dir, "dir2") )
     # dir1 contiene tutti i file di dir2
     cat_diff = dircat1 - dircat2
-    assert_equal(0, cat_diff.size)
+    cat_diff.size.should == 0
   end
 
-  def test_diff_dir2_dir1
+  it "test_diff_dir2_dir1" do
     dircat1 = DirCat.loadfromdir( File.join(@data_dir, "dir1") )
     dircat2 = DirCat.loadfromdir( File.join(@data_dir, "dir2") )
 
     # dir2 contiene un file in piu' di dir1
     cat_diff = dircat2 - dircat1
-    assert_equal(1, cat_diff.size)
+    cat_diff.size.should == 1
   end
 
-  def test_dir1_ser
+  it "test_dir1_ser" do
     dircat1  = DirCat.loadfromdir( File.join(@data_dir, "dir1") )
     not_existent_file = File.join(@tmp_dir, "not_existent", "dircat1.yaml")
     tmp_file = File.join(@tmp_dir, "dircat1.yaml")
 
-    assert_raise DirCatException do
-      dircat1.savetofile( not_existent_file )
-    end
+    lambda {dircat1.savetofile( not_existent_file )}.should raise_exception(DirCatException)
 
     dircat1.savetofile( tmp_file )
 
     dircat1_bis = DirCat.loadfromfile( tmp_file )
-    assert_equal( 0, (dircat1 - dircat1_bis).size )
-    assert_equal( 0, (dircat1_bis - dircat1).size )
+    (dircat1 - dircat1_bis).size.should == 0
+    (dircat1_bis - dircat1).size.should == 0
 
     FileUtils.rm( tmp_file )
   end
